<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterBumpActivity"
    android:padding="30dp"
    android:background="@color/backGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/icons8_info_90" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_bump"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"/>

        <RelativeLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/location"
                android:layout_centerVertical="true"/>

            <EditText
                android:id="@+id/txtUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/location"
                android:background="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sizeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:text="@string/size" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/size"
                android:background="@color/white"
                android:entries="@array/sizes" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/camLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/btnCamera"
                android:text="@string/plus" />

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/seaGreen"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnRegisterBump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/camLayout"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/seaGreen"
            android:text="@string/register" />



    </LinearLayout>


</RelativeLayout>