<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:padding="20dp"
    android:background="@color/backGreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/formLayout">

        <ImageView
            android:id="@+id/imgCutyCrater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"
            app:srcCompat="@drawable/logo"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgCutyCrater"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/citycrater"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <RelativeLayout
            android:id="@+id/dataLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginBottom="30dp">

            <RelativeLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/nombre" />

                <EditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/name"
                    android:background="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLayout"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/email"
                    android:background="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLayout"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/usernameTitle" />

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/username"
                    android:background="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernameLayout"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/passwordTitle" />

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/password"
                    android:background="@color/white" />

            </RelativeLayout>

            <Spinner
                android:id="@+id/userType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordLayout"
                android:background="@color/white"
                android:entries="@array/userTypes"/>


        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/btnSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/seaGreen"
        android:text="@string/sign_up" />

</RelativeLayout>