<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:padding="20dp"
    android:background="@color/backGreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgCutyCrater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/citycrater"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_below="@+id/imgCutyCrater"
            android:gravity="center"
            android:layout_marginBottom="30dp">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:id="@+id/dataLayout">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameLayout"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usernametitle"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_toEndOf="@id/username"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordLayout"
                android:layout_below="@id/usernameLayout"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordTitle"
                    android:layout_marginEnd="20dp"
                    android:layout_centerVertical="true"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_toEndOf="@id/password"/>

            </RelativeLayout>

        </RelativeLayout>


        <Button
            android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dataLayout"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/seaGreen"
            android:text="@string/log_in" />

    </RelativeLayout>



</RelativeLayout>